clusters/main/kubernetes/flux-system/webhooks/app/github/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
      checksum/secrets: 44136fa355b3678a1146ad16f7e8649e94fb4fc21fe77e8310c060f61caaff8a
      checksum/services: 5e2aaf937c45916fa1f8cbcbb8ca239a3fdf9fbe0f890df26f9cec361b6fa01f
      meta.helm.sh/release-name: flux-webhook
      meta.helm.sh/release-namespace: flux-webhook
      traefik.ingress.kubernetes.io/router.entrypoints: websecure
      traefik.ingress.kubernetes.io/router.middlewares: traefik-chain-basic@kubernetescrd
      traefik.ingress.kubernetes.io/router.tls: true

spec:
  rules:
  - host: flux-webhook.${BASE_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - hosts:
        - flux-webhook.${BASE_DOMAIN}
      clusterIssuer: cluster-cert
status:
    loadBalancer:
      ingress:
      - ip: ${TRAEFIK_IP}
